[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/vesting_lock",
  "tests",
]

[profile.release]
panic = "abort"
overflow-checks = true
opt-level = "s"
lto = true
codegen-units = 1
debug = true

[profile.dev]
panic = "abort"
